<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="#FFFFFF"
    tools:context=".Tutorial3" >

	<TextView
		android:id="@+id/appName"
		android:layout_marginTop="20dp"
		android:textStyle="bold"
      	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
      	android:textColor="#000000"
      	android:textSize="17sp"
      	android:layout_centerHorizontal="true"
     	android:text="@string/app_name" /> 

	<TextView
		android:id="@+id/title"
		android:layout_marginTop="10dp"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textColor="#000000"
     	android:textSize="15sp"
      	android:layout_centerHorizontal="true"
      	android:layout_below="@+id/appName"
      	android:text="@string/title_tutorial3" />

	<SurfaceView 
	    android:id="@+id/local_video"
      	android:layout_below="@+id/title"
      	android:layout_marginLeft="5dip"
      	android:layout_marginTop="10dip"
		android:layout_width="60dip"
		android:layout_height="80dip"
    	android:layout_alignParentLeft="true" />

	<com.addlive.view.VideoView 
	    android:id="@+id/remote_video"
      	android:layout_below="@+id/title"
      	android:layout_marginLeft="5dip"
      	android:layout_marginTop="10dip"
		android:layout_width="240dip"
		android:layout_height="320dip"
		android:layout_toRightOf="@+id/local_video" />

	<Button
		android:id="@+id/connect"
		android:text="@string/connect"
		android:layout_marginTop="10dp"
		android:textColor="#000000"
		android:textSize="15sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/remote_video"
		android:layout_centerHorizontal="true" />

	<Button
		android:id="@+id/disconnect"
		android:text="@string/disconnect"
		android:layout_marginTop="10dp"
		android:textColor="#000000"
		android:textSize="15sp"
		android:visibility="invisible"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/remote_video"
		android:layout_centerHorizontal="true" />

	<TextView
		android:id="@+id/status"
		android:layout_marginTop="55dp"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textSize="17sp"
      	android:layout_centerHorizontal="true"
      	android:layout_below="@+id/remote_video" />

	<TextView
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
		android:layout_marginLeft="10dp"
		android:layout_marginBottom="10dp"
      	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
      	android:textColor="#000000"
      	android:textSize="17sp"
     	android:text="@string/copyright" /> 

</RelativeLayout>
