<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:background="#FFFFFF"
    tools:context=".Tutorial5" >

	<TextView
		android:id="@+id/appName"
		android:layout_marginTop="20dp"
		android:textStyle="bold"
      	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
      	android:textColor="#000000"
      	android:textSize="17sp"
      	android:layout_centerHorizontal="true"
     	android:text="@string/app_name" /> 

	<SurfaceView 
	    android:id="@+id/local_video"
      	android:layout_below="@+id/appName"
      	android:layout_marginLeft="60dip"
      	android:layout_marginTop="10dip"
		android:layout_width="60dip"
		android:layout_height="80dip"
    	android:layout_alignParentLeft="true" />

	<TextView
		android:id="@+id/title"
		android:layout_marginTop="10dp"
      	android:layout_marginLeft="5dip"
      	android:layout_marginRight="60dip"
      	android:layout_toRightOf="@+id/local_video"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textColor="#000000"
     	android:textSize="15sp"
      	android:layout_below="@+id/appName"
      	android:text="@string/title_tutorial5" />

	<TextView
		android:id="@+id/desc"
      	android:layout_marginLeft="5dip"
      	android:layout_marginRight="60dip"
      	android:layout_toRightOf="@+id/local_video"
      	android:layout_below="@+id/title"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textColor="#000000"
     	android:textSize="13sp"
      	android:text="@string/desc_tutorial5" />
	
	<HorizontalScrollView
	    android:id="@+id/scroll"
	    android:layout_width="wrap_content"
	    android:layout_height="240dip"
	    android:scrollbars="horizontal"
	    android:fadeScrollbars="false"
	    android:paddingLeft="60dip"
	    android:paddingRight="60dip"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
      	android:layout_centerHorizontal="true"
	    android:layout_below="@+id/local_video"
	    android:layout_marginTop="5dip" >
	    
	    <LinearLayout
	    	android:id="@+id/scroll_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
			
		</LinearLayout>
	
	</HorizontalScrollView>

	<Button
		android:id="@+id/connect"
		android:text="@string/connect"
		android:layout_marginTop="5dp"
		android:textColor="#000000"
		android:textSize="15sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/scroll"
		android:layout_centerHorizontal="true" />

	<Button
		android:id="@+id/disconnect"
		android:text="@string/disconnect"
		android:layout_marginTop="10dp"
		android:textColor="#000000"
		android:textSize="15sp"
		android:visibility="invisible"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_below="@+id/scroll"
		android:layout_centerHorizontal="true" />

	<TextView
		android:id="@+id/status"
		android:layout_marginTop="55dp"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textSize="17sp"
      	android:layout_centerHorizontal="true"
      	android:layout_below="@+id/scroll" />

	<TextView
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
		android:layout_marginLeft="10dp"
		android:layout_marginBottom="10dp"
      	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
      	android:textColor="#000000"
      	android:textSize="17sp"
     	android:text="@string/copyright" /> 

</RelativeLayout>
