<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Tutorial1" >

	<TextView
		android:id="@+id/appName"
		android:layout_marginTop="20dp"
		android:textStyle="bold"
      	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
      	android:textColor="#000000"
      	android:textSize="17sp"
      	android:layout_centerHorizontal="true"
     	android:text="@string/app_name" /> 

	<TextView
		android:id="@+id/title"
		android:layout_marginTop="10dp"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:textColor="#000000"
     	android:textSize="15sp"
      	android:layout_centerHorizontal="true"
      	android:layout_below="@+id/appName"
      	android:text="@string/title_tutorial1" />

	<LinearLayout
      	android:layout_below="@+id/title"
		android:layout_marginTop="60dp"
		android:orientation="vertical"
      	android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
		<TextView
			android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:textColor="#000000"
		  	android:textSize="17sp"
		  	android:layout_gravity="center_horizontal"
		 	android:text="@string/sdk_version_label" />
		
		<TextView
			android:id="@+id/sdkVersion"
			android:layout_marginTop="10dp"
			android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:layout_gravity="center_horizontal"
		  	android:textColor="#000000"
		  	android:textSize="17sp"/>

		<TextView
			android:id="@+id/error"
			android:layout_marginTop="10dp"
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
		  	android:layout_gravity="center_horizontal"
		  	android:textColor="#000000"
	     	android:textSize="17sp"/>
		    
	</LinearLayout>

	<TextView
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
		android:layout_marginLeft="10dp"
		android:layout_marginBottom="10dp"
      	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
      	android:textColor="#000000"
      	android:textSize="17sp"
     	android:text="@string/copyright" /> 

</RelativeLayout>
